# tensorflowoify

./: .gitignore  README.md  pyproject.toml  sandbox.py
.github/workflows/: python-package.yml
owoify/: __init__.py  constants.py  owo.py
tests/: test_owoify.py
