[tool.poetry]
name = "owoify"
version = "0.2.0"
description = "Cutting edge technologies to owoify your texts"
authors = ["crinny"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
